# win

./: .gitignore  .gitmodules  README.md  advapi32.go  appveyor.yml  comctl32.go  comdlg32.go  const.go  crypt32.go  gdi32.go  gdiplus.go  imm32.go  iphlpapi.go  kernel32.go  ole32.go  oleaut32.go  opengl32.go  pdh.go  psapi.go  rpcrt4.go  shell32.go  shlwapi.go  types.go  types_386.go  types_amd64.go  user32.go  uxtheme.go  version.go  win.go  winmm.go  ws2_32.go
internal/: .gitignore  api_coverage.go  arg.go  cache.go  file.go  func.go  map.go  merge-into-master.bat  net.go  rat.go  string.go  stringset.go  type.go  version.go
internal/cmd/mktype/: mktype.go
internal/cmd/test/: test.go
internal/ctests/: CMakeLists.txt  build.bat  stdafx.h
internal/ctests/amd64/: .gitignore
internal/funcs/: OleLoadPictureFile.go
internal/types/A/: ABC.go  ABCFLOAT.go  ABORTPROC.go  ACCEL.go  ACCESS_MASK.go  ACCESS_RIGHTS.go  ACL.go  ACTRL_ACCESS.go  ACTRL_ACCESS_ENTRY.go  ACTRL_ACCESS_ENTRY_LIST.go  ACTRL_AUDIT.go  ACTRL_PROPERTY_ENTRY.go  ADDRINFO.go  ADDRINFOEX.go  AFPROTOCOLS.go  ALG_ID.go  ALTTABINFO.go  APPBARDATA.go  APPCATEGORYINFO.go  APPCATEGORYINFOLIST.go  ARRAY_INFO.go  ATOM.go  AUDIT_POLICY_INFORMATION.go  AUTO_SCROLL_DATA.go  AUXCAPS.go
internal/types/B/: BFFCALLBACK.go  BIND_OPTS.go  BITMAP.go  BITMAPINFO.go  BITMAPINFOHEADER.go  BLENDFUNCTION.go  BLENDOBJ.go  BLOB.go  BOOLEAN.go  BP_ANIMATIONPARAMS.go  BP_ANIMATIONSTYLE.go  BP_PAINTPARAMS.go  BROWSEINFO.go  BRUSHOBJ.go  BSMINFO.go  BSTR.go  BSTRBLOB.go  BYTE.go
internal/types/C/: CABINETSTATE.go  CABOOL.go  CABSTR.go  CABSTRBLOB.go  CAC.go  CACLIPDATA.go  CACLSID.go  CACY.go  CADATE.go  CADBL.go  CAFILETIME.go  CAFLT.go  CAH.go  CAI.go  CAL.go  CALID.go  CALPSTR.go  CALPWSTR.go  CALTYPE.go  CANDIDATEFORM.go  CANDIDATELIST.go  CAPROPVARIANT.go  CASCODE.go  CAUB.go  CAUH.go  CAUI.go  CAUL.go  CCHOOKPROC.go  CERT_BLOB.go  CERT_CHAIN_CONTEXT.go  CERT_CHAIN_ELEMENT.go  CERT_CHAIN_ENGINE_CONFIG.go  CERT_CHAIN_PARA.go  CERT_CHAIN_POLICY_PARA.go  CERT_CHAIN_POLICY_STATUS.go  CERT_CONTEXT.go  CERT_ENHKEY_USAGE.go  CERT_EXTENSION.go  CERT_EXTENSIONS.go  CERT_INFO.go  (+105 more)
internal/types/D/: DACOMPARE.go  DAENUMCALLBACK.go  DATA_BLOB.go  DATE.go  DATETIME.go  DECIMAL.go  DEFCONTEXTMENU.go  DESIGNVECTOR.go  DESKTOPENUMPROC.go  DEVMODE.go  DHPDEV.go  DHSURF.go  DISPID.go  DISPLAY_DEVICE.go  DISPPARAMS.go  DLGPROC.go  DLGTEMPLATE.go  DLLVERSIONINFO.go  DOCINFO.go  DOUBLE.go  DRAWSTATEPROC.go  DRAWTEXTPARAMS.go  DTBGOPTS.go  DTTOPTS.go  DTT_CALLBACK_PROC.go  DVTARGETDEVICE.go  DWORD_PTR.go
internal/types/E/: E-R-R-O-R_-S-T-A-T-U-S_-T.go  EFS_CERTIFICATE_BLOB.go  EFS_HASH_BLOB.go  ENABLE_TRACE_PARAMETERS.go  ENCRYPTED_LM_OWF_PASSWORD.go  ENCRYPTED_NT_OWF_PASSWORD.go  ENCRYPTION_CERTIFICATE.go  ENCRYPTION_CERTIFICATE_HASH.go  ENCRYPTION_CERTIFICATE_HASH_LIST.go  ENCRYPTION_CERTIFICATE_LIST.go  ENG_TIME_FIELDS.go  ENHMETAHEADER.go  ENHMETARECORD.go  ENHMFENUMPROC.go  ENUMLOGFONTEX.go  ENUMLOGFONTEXDV.go  ENUMRESLANGPROC.go  ENUM_PAGE_FILE_INFORMATION.go  ENUM_SERVICE_STATUS.go  EVENT_DESCRIPTOR.go  (+19 more)
internal/win/: const.go  win_386.go  win_amd64.go  win_windows.go
(+1168 files in other folders)
